# hackathon_routing

./: .gitignore  AGENTS.md  CMakeLists.txt  README.md  slides.md  speed_loss_plan.md  speed_loss_summary.md
graph_builder/: CMakeLists.txt
graph_builder/src/: canal_injector.cpp  canal_injector.hpp  cch_preprocessor.cpp  cch_preprocessor.hpp  gebco_loader.cpp  gebco_loader.hpp  graph_builder.cpp  graph_builder.hpp  graph_serialiser.cpp  graph_serialiser.hpp  gshhg_masker.cpp  gshhg_masker.hpp  main.cpp  snap_builder_main.cpp  snap_table_builder.cpp  snap_table_builder.hpp
lib/: CMakeLists.txt
lib/include/maritime/: edge_weight.hpp  foc_model.hpp  mmap_region.hpp  query.hpp  routing_engine.hpp  static_graph.hpp  weather_manager.hpp  weights_header.hpp
router_server/: CMakeLists.txt
router_server/python/: bindings.cpp
router_server/src/: main.cpp  route_query.cpp  server.cpp  server.hpp  voyage_planner.cpp  voyage_planner.hpp  voyage_router.cpp  weights_loader.cpp  weights_loader.hpp
scripts/: generate_fading_storm.py  generate_moving_storm.py  generate_storm.py  plan_voyage.py  plot_fading_storm.py  plot_rolling_voyage.py  plot_storm_comparison.py  route.py
tests/: CMakeLists.txt
tests/integration/: test_graph_round_trip.cpp  test_snap_round_trip.cpp  test_weights_round_trip.cpp
tests/unit/: test_bearing.cpp  test_canal_injector.cpp  test_edge_weight.cpp  test_haversine.cpp  test_mmap_region.cpp  test_npy_loader.cpp  test_snap_table.cpp  test_weather_buffer.cpp  test_weights_writer.cpp
weather_etl/: CMakeLists.txt  etl.py
weather_etl/python/: bindings.cpp
weather_etl/src/: avg_weather_loader.cpp  avg_weather_loader.hpp  main.cpp  npy_loader.cpp  npy_loader.hpp  ocs_loader.cpp  ocs_loader.hpp  weights_writer.cpp  weights_writer.hpp
